--- a/argocd-appprojects/sample.project.yaml
+++ b/argocd-appprojects/sample.project.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: sample-project
-  namespace: argocd
+  namespace: argo-cd
 spec:
   clusterResourceWhitelist:
   - group: '*'
