--- a/applications/exampleapp.yaml
+++ b/applications/exampleapp.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: example
-  namespace: argocd
+  namespace: argo-cd
 spec:
   destination:
     namespace: test
