--- a/argocd-install/argo-cd/values.yaml
+++ b/argocd-install/argo-cd/values.yaml
@@ -460,7 +460,7 @@ server:
   service:
     annotations: {}
     labels: {}
-    type: ClusterIP
+    type: LoadBalancer
     ## For node port default ports
     nodePortHttp: 30080
     nodePortHttps: 30443
@@ -591,6 +591,9 @@ server:
     #     - openid
     #     - profile
     #     - email
+    accounts.qauser: apiKey, login
+    accounts.devuser: apiKey, login
+    accounts.adminuser: apiKey, login
 
   ## Annotations to be added to ArgoCD ConfigMap
   configAnnotations: {}
@@ -598,7 +601,16 @@ server:
   ## ArgoCD rbac config
   ## reference https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/rbac.md
   rbacConfig:
-    {}
+    policy.default: role.readonly
+    policy.csv: |
+      p, role:qa, applications, *, */*, allow
+      p, role:dev, applications, *, */*, allow
+      p, role:dev, projects, *, *, allow
+      p, role:dev, repositories, *, *, allow
+      g, adminuser, role:admin
+      g, devuser, role:dev
+      g, qauser, role:qa
+      
     # policy.csv is an file containing user-defined RBAC policies and role definitions (optional).
     # Policy rules are in the form:
     #   p, subject, resource, action, object, effect
